--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ SENDGRID_API_KEY=getyourownapikey
 FROM_EMAIL=
 JWT_SECRET=canbeanything
 APP_URL=http://localhost:3000
-CLOUDINARY_URL=getyourownapikey
+CLOUDINARY_URL=cloudinary://393224441883571:bM17IRXEQuqYlHn-SWIIJfcAmZI@dkz9tmibx
